Edit overflow-x attribute from 'hidden' to 'auto' to fix that x-scroll bar is shown on desktop browser

--- a/survey/static/styles.scss
+++ b/survey/static/styles.scss
@@ -307,7 +307,7 @@ a, a:focus, a:hover, a:active, a:visited {
 		
 		.header__title {
 			padding: 15px 15px 11px 15px; 
-			overflow-x: scroll;
+			overflow-x: auto;
 			white-space: nowrap;
 			font-weight: 700; 
 			font-size: 1.8em;
@@ -320,7 +320,7 @@ a, a:focus, a:hover, a:active, a:visited {
 		
 		.header__subtitle {
 			padding: 8px 8px 8px 15px; 
-			overflow-x: scroll;
+			overflow-x: auto;
 			white-space: nowrap;
 			font-weight: 300; 
 			color: white;
@@ -576,7 +576,7 @@ a, a:focus, a:hover, a:active, a:visited {
 		.header__title {
 			max-width: 600px;
 			padding: 15px 15px 11px 15px; 
-			overflow-x: scroll;
+			overflow-x: auto;
 			white-space: nowrap;
 			font-weight: 700; 
 			font-size: 1.8em;
@@ -590,7 +590,7 @@ a, a:focus, a:hover, a:active, a:visited {
 		.header__subtitle {
 			max-width: 600px;
 			padding: 8px 8px 8px 15px; 
-			overflow-x: scroll;
+			overflow-x: auto;
 			white-space: nowrap;
 			font-weight: 300; 
 			color: white;
